# ai-enterprise-knowledge-solution-project

./: .env.example  .gitignore  CLAUDE.md  README.md
backend/: .dockerignore  Dockerfile  pyproject.toml  w35-f2-aggregate-salvage.py  w35-f2-aggregate.json  w35-f2-i01-run-1.json  w35-f2-i01-run-2.json  w35-f2-i01-run-3.json  w35-f2-i01-run-4.json  w35-f2-i01-run-5.json  w35-f2-i07-run-1.json  w35-f2-i07-run-2.json  w35-f2-i07-run-3.json  w35-f2-i07-run-4.json  w35-f2-i07-run-5.json  w35-f2-runner.py  w35-f2-stage-timing-aggregate.json  w35-f2-stage-timing.py  w38-f3-runner.py  w39-f1-pathb-runner.py  w39-f2-patha-runner.py  w41-f1-runner.py
backend/api/: error_handlers.py  server.py
backend/api/auth/: cookies.py  dependency.py  entra_graph.py  mock_msal.py  models.py  msal_provider.py  postgres_users_store.py  users_repo.py  users_store.py
backend/api/middleware/: __init__.py  acl.py  rate_limit.py
backend/api/routes/: auth.py  chunking.py  chunks.py  config_test.py  conversations.py  debug.py  doc_config.py  documents.py  eval.py  feedback.py  groups.py  health.py  integration.py  kb.py  kb_acl.py  observability.py  profile_presets.py  query.py  retrieval_test.py  roles.py
backend/api/routes/admin/: __init__.py  api_keys.py  audit_log.py  connections.py  identity.py
backend/api/schemas/: admin.py  admin_api_keys.py  admin_identity.py  auth.py  config_test.py  conversation.py  doc_classification.py  doc_config.py  doc_profile.py  errors.py  eval.py  kb.py  listing.py  observability.py  query.py  rbac.py  retrieval_test.py
backend/conversations/: __init__.py  postgres_store.py  store.py
backend/eval/: completeness_coverage.py  completeness_judge.py  controlled_comparison.py  eval_set_augmentor.py  orchestrator.py  ragas_evaluator.py  runner.py
backend/generation/: __init__.py  citation_enrichment.py  citation_expansion.py  citation_image_neighbors.py  context_expander.py  crag.py  effective_config.py  inline_image_markers.py  parent_doc_retriever.py  prompt_builder.py  query_reformulator.py  section_anchor_markers.py  stream_composer.py  synthesizer.py
backend/indexing/: populate.py  schema.json  schemas.py
backend/ingestion/: orchestrator.py  profile_presets.py  profiler.py
backend/ingestion/chunker/: layout_aware.py  strategies.py
backend/ingestion/embedding/: __init__.py  azure_openai_embedder.py  base.py
backend/ingestion/parsers/: __init__.py  base.py  pdf_parser.py  pptx_parser.py
backend/ingestion/screenshots/: __init__.py  extractor.py  uploader.py
backend/integration/: __init__.py  connector.py  import_service.py  models.py
backend/integration/sharepoint/: __init__.py  connector.py  graph_client.py  permissions.py
backend/kb_management/: __init__.py  doc_classification_store.py  doc_config_store.py  doc_profile_store.py  factory.py  postgres_backend.py  service.py  storage.py
backend/observability/: alerts.py  cost_estimator.py  langfuse_trace.py  langfuse_trace_list.py  langfuse_tracer.py  observe.py  realtime_cost.py  weekly_signal_report.py
backend/retrieval/: __init__.py  hybrid.py  result_fusion.py  retrieval_engine.py
backend/retrieval/reranker/: __init__.py  azure_semantic.py  base.py  cohere.py  factory.py  fallback.py  voyage.py  zeroentropy.py
backend/scripts/: w85_chunk_dump.py  w85_chunk_structure_compare.py
backend/storage/: admin_identity_storage.py  admin_provider_factory.py  admin_provider_postgres.py  admin_provider_storage.py  audit_log_storage.py  azure_key_vault.py  kb_naming.py  key_vault.py  key_vault_factory.py  rbac_postgres.py  rbac_storage.py  settings.py
backend/tests/: conftest.py  test_answer_detail_ch006.py  test_api_skeleton.py  test_auth_cookie_transport.py  test_auth_endpoints.py  test_auth_routes.py  test_auth_self_register.py  test_auth_users_postgres_store.py  test_ch010_chapter_overview_pin.py  test_chunker.py  test_chunks_listing.py  test_citation_enrichment.py  test_citation_expansion.py  test_citation_image_neighbors.py  test_complete_coverage_w97.py  test_completeness_coverage.py  test_completeness_judge.py  test_config_test_route.py  test_context_expander.py  test_controlled_comparison.py  test_crag.py  test_debug_trace.py  test_doc_classification_route.py  test_doc_classification_store.py  test_doc_config_routes.py  test_doc_config_store.py  test_doc_profile_backfill.py  test_doc_profile_override.py  test_doc_profile_read_surface.py  test_documents_listing.py  test_e1_e5_e12_smoke.py  test_effective_config.py  test_embedder.py  test_error_contract.py  test_eval_endpoints.py  test_eval_kb_id_bug037.py  test_eval_ragas.py  test_eval_runner.py  test_eval_set_augmentor.py  test_f1_7_mock_smoke.py  (+46 more)
backend/tests/api/: test_acl_middleware.py  test_admin_api_keys.py  test_admin_audit_log.py  test_admin_connections.py  test_admin_identity.py  test_admin_usage_stats.py  test_chunking_preview.py  test_conversations_route.py  test_documents_route.py  test_groups_route.py  test_health_route.py  test_integration_route.py  test_kb_acl_route.py  test_kb_route_acl.py  test_query_route_acl.py  test_query_route_acl_trimming.py  test_query_screenshot_proxy.py  test_query_stream_verify.py  test_roles_route.py  test_traces_route.py
backend/tests/integration/: test_capabilities.py  test_graph_client.py  test_import_service.py  test_sharepoint_connector.py  test_sharepoint_permissions.py
backend/tests/storage/: test_audit_log.py  test_rbac_storage.py
dev-framework/: README.md
docs/: architecture.md  decision-form.md  eval-methodology.md  eval-set-completeness-w96.nuggets.yaml  eval-set-completeness-w96.yaml  eval-set-completeness-w97-variant.nuggets.yaml  eval-set-completeness-w97-variant.yaml  eval-set-image-recall-ar.yaml  eval-set-v0-w25-supplement.yaml  eval-set-v0.yaml  eval-set-v1-draft.yaml  eval-set-w42diag-testkb.yaml  setup.md
frontend/: .npmrc  next.config.mjs  package.json  playwright.config.ts  pnpm-lock.yaml  staticwebapp.config.json  tailwind.config.ts  vitest.config.ts
infrastructure/: docker-compose.yml
references/: REFERENCE_USAGE.md
scripts/: create_index.py  (+24 more)
(+766 files in other folders)
