[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ekp-backend"
version = "0.1.0"
description = "EKP Tier 1 Foundation backend (FastAPI)"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "structlog>=24.4",
    "tenacity>=9.0",
    "httpx>=0.27",
    "python-multipart>=0.0.12",
    "pyyaml>=6",
    "docling>=2.0",
    "tiktoken>=0.7",
    "azure-storage-blob>=12.28",
    "azure-identity>=1.20",
    "openai>=1.50",
    "truststore>=0.10",
    # W8 D2 F1.2 — Microsoft Entra ID JWT validation. Backend = resource server,
    # validates client tokens only; token acquisition lives in frontend
    # msal-react (W8 D3 F1.3). architecture.md §6.1 W7 + §3.2 vendor scope.
    "python-jose[cryptography]>=3.3",
    # W8 D5 F5.1 — Real Langfuse SDK wire replaces W1 structlog-only stub.
    # architecture.md §3.2 stack lock + §7.4 Day-2 Readiness (LLM observability
    # + cost dashboard data source). Lazy init when public/secret keys present;
    # no-op when missing so local dev / CI work unchanged.
    "langfuse>=2.50",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "ruff>=0.7",
    "mypy>=1.13",
]
eval = [
    # RAGAs 4-metric judge per architecture.md §3.2 stack lock + W4 D2 F2.
    # langchain-openai bridges Azure OpenAI judge via ragas LangchainLLMWrapper.
    "ragas>=0.4,<0.5",
    "langchain-openai>=0.2",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["api*", "storage*", "observability*", "kb_management*", "ingestion*"]
exclude = ["tests*", ".venv*", "*.egg-info"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "TID"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]
