[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ekp-backend"
version = "0.1.0"
description = "EKP Tier 1 Foundation backend (FastAPI)"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "structlog>=24.4",
    "tenacity>=9.0",
    "httpx>=0.27",
    "python-multipart>=0.0.12",
    "pyyaml>=6",
    "docling>=2.0",
    "tiktoken>=0.7",
    "azure-storage-blob>=12.28",
    # B-22 — async transport for azure.storage.blob.aio (screenshots/uploader.py +
    # integration/source_store.py). The .aio client needs an async HTTP transport but
    # does NOT pull one in transitively — aiohttp must be declared, else a clean
    # install (CI / fresh deploy) fails at runtime with "Unable to create async
    # transport". Local dev only worked by accident (aiohttp arrived via the `eval`
    # extras). Safe to declare only after BUG-045 (B-23) stopped unit tests from
    # constructing real blob clients, which otherwise hang once aiohttp is present.
    "aiohttp>=3.10",
    "azure-identity>=1.20",
    "openai>=1.50",
    "truststore>=0.10",
    # W8 D2 F1.2 — Microsoft Entra ID JWT validation. Backend = resource server,
    # validates client tokens only; token acquisition lives in frontend
    # msal-react (W8 D3 F1.3). architecture.md §6.1 W7 + §3.2 vendor scope.
    "python-jose[cryptography]>=3.3",
    # W8 D5 F5.1 — Real Langfuse SDK wire replaces W1 structlog-only stub.
    # architecture.md §3.2 stack lock + §7.4 Day-2 Readiness (LLM observability
    # + cost dashboard data source). Lazy init when public/secret keys present;
    # no-op when missing so local dev / CI work unchanged.
    "langfuse>=2.50",
    # W17 F1 — KB Manager + users_repo persistent backing (ADR-0023). Async
    # Postgres driver (psycopg 3); connection-per-op (Tier 1 KB ops infrequent —
    # no pool). Only used when DATABASE_URL is set; PostgresKBBackend is lazily
    # imported (kb_management/factory.py) so an unset DATABASE_URL never touches it.
    "psycopg[binary]>=3.2",
    # W24-wave-c1 F1 — Key Vault provider production impl (ADR-0026 Option B).
    # AzureKeyVaultProvider lazy-imported by storage/key_vault_factory.py so
    # unset KEY_VAULT_URL never touches the SDK (local dev / CI / R8-blocked
    # installs keep working via EnvVarProvider fallback). Install path per
    # ADR-0017 Plan B (c) — mobile-hotspot first to sidestep corp-proxy R8 risk
    # on the 600KB+ binary wheel (Langfuse SDK 2026-05-16 precedent, occurrence #8).
    "azure-keyvault-secrets>=4.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    # BUG-045 (B-23) safety net — kill + name any test that blocks on the network
    # (e.g. an un-mocked async blob client) instead of hanging until the CI job
    # timeout. Wired via `--timeout` in the backend-ci / backend-deploy pytest step.
    "pytest-timeout>=2.3",
    "ruff>=0.7",
    "mypy>=1.13",
]
eval = [
    # RAGAs 4-metric judge per architecture.md §3.2 stack lock + W4 D2 F2.
    # langchain-openai bridges Azure OpenAI judge via ragas LangchainLLMWrapper.
    "ragas>=0.4,<0.5",
    "langchain-openai>=0.2",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["api*", "storage*", "observability*", "kb_management*", "ingestion*", "integration*"]
exclude = ["tests*", ".venv*", "*.egg-info"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "TID"]
ignore = ["E501"]

[tool.ruff.lint.flake8-bugbear]
# FastAPI's dependency-injection callables are the framework-idiomatic way to
# declare request params in argument defaults; B008 (function-call-in-default)
# is a false positive for them.
extend-immutable-calls = [
    "fastapi.Query",
    "fastapi.Depends",
    "fastapi.Path",
    "fastapi.Body",
    "fastapi.Header",
    "fastapi.Form",
    "fastapi.File",
    "fastapi.Cookie",
    "fastapi.Security",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]
